# terminallysimple

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  POMODORO_FEATURE.md  README.md  REFACTORING_SUMMARY.md  RELEASE_READY.md  WEATHER_GUIDE.md  WEATHER_IMPLEMENTATION.md  WEATHER_KEYBOARD_FEATURE.md  app.py  base_screen.py  config.py  constants.py  editor.py  pyproject.toml  requirements.txt  settings.py  tasks.py  test_autosave.py  test_pomodoro.py  test_recovery_flow.py  test_undo_redo.py  test_weather_api.py  test_weather_shortcut.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
dialogs/: __init__.py  pomodoro_dialogs.py  weather_dialogs.py
notes/: asdasdasd.md
tests/: test_autosave_comprehensive.py  test_autosave_recovery.py  test_refactoring.py  test_select_all.py
utils/: __init__.py  validators.py  weather.py
widgets/: __init__.py  system_header.py
